[gd_scene load_steps=4 format=3 uid="uid://cpwp4xx6mv5p"]

[ext_resource type="Script" path="res://demo/client_ui.gd" id="1"]
[ext_resource type="Script" path="res://client/multiplayer_client.gd" id="2"]
[ext_resource type="Script" path="res://demo/PeerOptionButton.gd" id="3_crfds"]

[node name="ClientUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Client" type="Node" parent="."]
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Connect" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Connect"]
layout_mode = 2
text = "Connect to:"

[node name="Host" type="LineEdit" parent="VBoxContainer/Connect"]
layout_mode = 2
size_flags_horizontal = 3
text = "ws://localhost:9080"

[node name="Room" type="Label" parent="VBoxContainer/Connect"]
layout_mode = 2
size_flags_vertical = 5
text = "Room"

[node name="RoomSecret" type="LineEdit" parent="VBoxContainer/Connect"]
layout_mode = 2
placeholder_text = "secret"

[node name="Mesh" type="CheckBox" parent="VBoxContainer/Connect"]
layout_mode = 2
button_pressed = true
text = "Mesh"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Register" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Register"

[node name="Leave" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Leave
"

[node name="Seal" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Seal"

[node name="Ping" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ping"

[node name="Peers" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Print peers"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Optional name"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "To:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("3_crfds")

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Message"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Send"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Seal" to="." method="_on_seal_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Ping" to="." method="_on_ping_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Peers" to="." method="_on_peers_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
